--- a/style.css
+++ b/style.css
@@ -1,336 +1,375 @@
+/* Reset de estilos */
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    font-size: 1em;
-    font-family: "Krub";
+  padding: 0; /* Define o preenchimento como 0 */
+  margin: 0; /* Define a margem como 0 */
+  box-sizing: border-box; /* Inclui o padding e a borda no tamanho total do elemento */
+  text-decoration: none; /* Remove sublinhados padrão de links */
+  font-size: 1em; /* Define o tamanho da fonte como 1em */
+  font-family: "Krub"; /* Define a fonte como "Krub" */
+}
+
+/* Estilo para o contêiner de vídeo */
+.video-container {
+  position: fixed; /* Posição fixa na janela de visualização */
+  top: 0; /* Alinhamento no topo */
+  left: 0; /* Alinhamento à esquerda */
+  width: 100%; /* Largura total */
+  height: 100%; /* Altura total */
+  overflow: hidden; /* Oculta o conteúdo que transborda */
+}
+
+/* Estilo para vídeos */
+video {
+  width: 100%; /* Largura total */
+  height: 100%; /* Altura total */
+  object-fit: cover; /* Redimensiona o vídeo para cobrir o contêiner */
+  opacity: 0.5; /* Opacidade de 50% */
+}
+
+/* Estilo para o corpo da página */
+body {
+  height: 100vh; /* Altura total da viewport */
+  background-color: #fdfdfd; /* Cor de fundo */
+  background-size: cover; /* Cobrir toda a área do fundo */
+  background-position: center; /* Posicionamento central */
+  background-repeat: no-repeat; /* Não repetir a imagem de fundo */
+}
+
+/* Estilo para o cabeçalho principal */
+.main-header-nav {
+  display: flex; /* Exibe os itens em linha */
+  justify-content: space-around; /* Distribuição uniforme dos itens */
+  align-items: center; /* Alinhamento vertical dos itens */
+  text-align: center; /* Alinhamento do texto */
+  height: 100px; /* Altura do cabeçalho */
+  background-color: #0d5782; /* Cor de fundo */
+  position: relative; /* Posição relativa ao elemento pai */
+}
+/* Estilo para o título no cabeçalho */
+.main-header-nav-title {
+  display: flex; /* Exibe como flexível */
+  justify-content: space-around; /* Distribui os itens igualmente ao redor do eixo principal */
+  align-items: end; /* Alinha os itens na extremidade inferior */
+}
+
+/* Estilo para o título do clima */
+.main-header-nav-title-weather {
+  font-family: "Krona One"; /* Define a fonte */
+  color: #fdfdfd; /* Cor do texto */
+  font-size: 50px; /* Tamanho da fonte */
+  padding: 0 10px 0 0; /* Preenchimento */
+}
+
+/* Estilo para o título "wise" no cabeçalho */
+.main-header-nav-title-wise {
+  font-family: "Krub"; /* Define a fonte */
+  color: #fdfdfd; /* Cor do texto */
+  font-size: 40px; /* Tamanho da fonte */
+}
+
+/* Estilo para o logo no cabeçalho */
+.main-header-nav-logo {
+  width: 140px; /* Largura */
+  position: relative; /* Posição relativa */
+  margin-top: 70px; /* Margem superior */
+}
+
+/* Estilo para o contêiner principal da cidade */
+.main-city {
+  display: flex; /* Exibe como flexível */
+  flex-direction: column; /* Direção da disposição dos itens */
+  align-items: center; /* Alinhamento dos itens */
+  text-align: center; /* Alinhamento do texto */
+  margin-top: 60px; /* Margem superior */
+  position: relative; /* Posição relativa */
+}
+
+/* Estilo para o título da cidade */
+.main-city h3 {
+  color: #0a4363; /* Cor do texto */
+  font-weight: 500; /* Peso da fonte */
+  font-size: 25px; /* Tamanho da fonte */
+  font-style: inherit; /* Estilo da fonte */
+}
+
+/* Estilo para o formulário da cidade */
+.main-city-form {
+  display: flex; /* Exibe como flexível */
+  flex-direction: column; /* Direção da disposição dos itens */
+  align-items: center; /* Alinhamento dos itens */
+  margin-top: 10px; /* Margem superior */
+}
+
+/* Estilo para o campo de entrada do formulário */
+.main-city-form input {
+  padding-left: 20px; /* Preenchimento à esquerda */
+  width: 700px; /* Largura */
+  height: 50px; /* Altura */
+  border-radius: 50px; /* Raio do canto */
+  background-color: #d9d9d9; /* Cor de fundo */
+}
+
+/* Estilo para o botão do formulário */
+.main-city-form button {
+  width: 100px; /* Largura */
+  height: 50px; /* Altura */
+  border-radius: 50px; /* Raio do canto */
+  margin-left: 10px; /* Margem à esquerda */
+  background-color: #d9d9d9; /* Cor de fundo */
+}
+
+/* Estilo para o contêiner principal do clima */
+.main-clima {
+  display: flex; /* Exibe como flexível */
+  justify-content: center; /* Justifica os itens ao centro */
+  position: relative; /* Posição relativa */
+}
+
+/* Estilo para o resultado do clima */
+#climaResult {
+  margin-top: 4rem; /* Margem superior */
+  display: none; /* Não exibe */
+  background-color: #a3ddff; /* Cor de fundo */
+  width: 500px; /* Largura */
+  border-radius: 50px; /* Raio do canto */
+  justify-content: center; /* Justifica os itens ao centro */
+  align-items: center; /* Alinha os itens ao centro */
+  box-shadow: 0px 0px 20px #0a4363; /* Sombra */
+  padding: 20px; /* Preenchimento */
+}
+
+/* Estilo para o nome da cidade no resultado do clima */
+.clima-city-name {
+  display: flex; /* Exibe como flexível */
+  text-align: center; /* Alinhamento do texto */
+  justify-content: center; /* Justifica os itens ao centro */
+  font-size: xx-large; /* Tamanho da fonte */
+  font-weight: 600; /* Peso da fonte */
+  text-shadow: 0px 0px 5px #fdfdfd; /* Sombra do texto */
+}
+
+/* Estilo para a temperatura da cidade no resultado do clima */
+.clima-city-temp {
+  display: flex; /* Exibe como flexível */
+  justify-content: center; /* Justifica os itens ao centro */
+  align-items: center; /* Alinha os itens ao centro */
+  text-align: center; /* Alinhamento do texto */
+  padding: 30px; /* Preenchimento */
+  font-size: 50px; /* Tamanho da fonte */
+}
+
+/* Estilo para o ícone da cidade no resultado do clima */
+.clima-city-icon {
+  display: flex; /* Exibe como flexível */
+  text-align: center; /* Alinhamento do texto */
+  justify-content: center; /* Justifica os itens ao centro */
+  align-items: center; /* Alinha os itens ao centro */
+  font-weight: 700; /* Peso da fonte */
+  font-size: 20px; /* Tamanho da fonte */
+}
+
+/* Estilo para o texto de informações adicionais sobre a cidade no resultado do clima */
+.clima-city-bot {
+  display: flex; /* Exibe como flexível */
+  align-items: center; /* Alinha os itens ao centro */
+  text-align: center; /* Alinhamento do texto */
+  justify-content: center; /* Justifica os itens ao centro */
+  font-weight: 500; /* Peso da fonte */
+  font-size: large; /* Tamanho da fonte */
+}
+
+/* Estilo para informações de umidade e vento no resultado do clima */
+.clima-city-umidade,
+.clima-city-vento {
+  display: flex; /* Exibe como flexível */
+  align-items: center; /* Alinha os itens ao centro */
+  margin-top: 30px; /* Margem superior */
+}
+
+/* Estilo para adicionar espaçamento horizontal entre elementos */
+.espacamento {
+  margin: 0 10px; /* Adiciona espaçamento horizontal */
+  margin-top: 30px; /* Margem superior */
+}
+
+/* Estilo para a bandeira da cidade */
+.flag-city {
+  width: 40px; /* Largura */
+  margin: 0 15px; /* Margem */
+}
+
+/* Estilo para o pin do mapa */
+#pin_map {
+  position: relative; /* Posição relativa */
+  margin-left: 15px; /* Margem à esquerda */
+  margin-top: 3px; /* Margem superior */
+}
+
+/* Estilos de mídia para responsividade */
+
+/* Para telas menores que 815px */
+@media (max-width: 815px) {
+  .main-city-form input {
+    width: 500px; /* Reduz a largura do campo de entrada */
   }
-  
-  .video-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+}
+
+/* Para telas menores que 610px */
+@media (max-width: 610px) {
+  .main-city-form input {
+    width: 400px; /* Reduz ainda mais a largura do campo de entrada */
   }
-  
-  video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-  }
-  
-  body {
-    height: 100vh;
-    background-color: #fdfdfd;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-  
-  .main-header-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    height: 100px;
-    background-color: #0d5782;
-    position: relative;
-  }
-  .main-header-nav-title {
-    display: flex;
-    justify-content: space-around;
-    align-items: end;
-  }
+}
+
+/* Para telas menores que 565px */
+@media (max-width: 565px) {
   .main-header-nav-title-weather {
-    font-family: "Krona One";
-    color: #fdfdfd;
-    font-size: 50px;
-    padding: 0 10px 0 0;
+    font-size: 40px; /* Reduz o tamanho do título do clima */
   }
   .main-header-nav-title-wise {
-    font-family: "Krub";
-    color: #fdfdfd;
-    font-size: 40px;
+    font-size: 30px; /* Reduz o tamanho do título "wise" */
   }
   .main-header-nav-logo {
-    width: 140px;
-    position: relative;
-    margin-top: 70px;
+    width: 120px; /* Reduz a largura do logo */
   }
-  
-  .main-city {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-top: 60px;
-    position: relative;
-  }
-  .main-city h3 {
-    color: #0a4363;
-    font-weight: 500;
-    font-size: 25px;
-    font-style: inherit;
-  }
-  .main-city-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 10px;
+  #climaResult {
+    width: 400px; /* Reduz a largura do contêiner de resultado do clima */
   }
   .main-city-form input {
-    padding-left: 20px;
-    width: 700px;
-    height: 50px;
-    border-radius: 50px;
-    background-color: #d9d9d9;
+    width: 300px; /* Reduz a largura do campo de entrada */
   }
   .main-city-form button {
-    width: 100px;
-    height: 50px;
-    border-radius: 50px;
-    margin-left: 10px;
-    background-color: #d9d9d9;
+    width: 80px; /* Reduz a largura do botão */
   }
-  
-  .main-clima {
-    display: flex;
-    justify-content: center;
-    position: relative;
+}
+
+/* Para telas menores que 470px */
+@media (max-width: 470px) {
+  .main-header-nav-logo {
+    display: none; /* Esconde o logo */
   }
-  
   #climaResult {
-    margin-top: 4rem;
-    display: none;
-    background-color: #a3ddff;
-    width: 500px;
-    border-radius: 50px;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0px 0px 20px #0a4363;
-    padding: 20px;
+    width: 350px; /* Reduz a largura do contêiner de resultado do clima */
   }
-  
-  .clima-city-name {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    font-size: xx-large;
-    font-weight: 600;
-    text-shadow: 0px 0px 5px #fdfdfd;
+}
+
+/* Para telas menores que 390px */
+@media (max-width: 390px) {
+  #climaResult {
+    width: 350px; /* Reduz a largura do contêiner de resultado do clima */
+  }
+  .main-city-form input {
+    width: 250px; /* Reduz a largura do campo de entrada */
+  }
+  .main-city-form button {
+    width: 70px; /* Reduz a largura do botão */
+    font-size: 13px; /* Reduz o tamanho da fonte do botão */
+  }
+  .main-city h3 {
+    font-size: 20px; /* Reduz o tamanho do título da cidade */
   }
   .clima-city-temp {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 30px;
-    font-size: 50px;
+    font-size: 40px; /* Reduz o tamanho da fonte da temperatura */
   }
   .clima-city-icon {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-    font-size: 20px;
+    font-size: 20px; /* Reduz o tamanho da fonte do ícone */
+  }
+}
+
+/* Para telas menores que 350px */
+@media (max-width: 350px) {
+  #climaResult {
+    margin-top: 2rem; /* Ajusta a margem superior */
+    margin-bottom: 100px; /* Ajusta a margem inferior */
+    width: 270px; /* Reduz a largura do contêiner de resultado do clima */
+    padding: 20px 10px; /* Ajusta o preenchimento */
+  }
+  .main-city-form input {
+    width: 200px; /* Reduz a largura do campo de entrada */
+    height: 35px; /* Reduz a altura do campo de entrada */
+  }
+  .main-city h3 {
+    font-size: 15px; /* Reduz o tamanho do título da cidade */
+    font-weight: 600; /* Peso da fonte */
+  }
+  .main-city-form button {
+    width: 65px; /* Reduz a largura do botão */
+    font-size: 13px; /* Reduz o tamanho da fonte do botão */
+    height: 35px; /* Reduz a altura do botão */
+  }
+  .clima-city-temp {
+    font-size: 35px; /* Reduz o tamanho da fonte da temperatura */
+  }
+  .clima-city-name {
+    font-size: x-large; /* Reduz o tamanho da fonte do nome da cidade */
+  }
+  .flag-city {
+    width: 30px; /* Reduz a largura da bandeira da cidade */
+    margin: 0 10px; /* Ajusta a margem */
+  }
+  .main-header-nav-title-weather {
+    font-size: 35px; /* Reduz o tamanho do título do clima */
+  }
+  .main-header-nav-title-wise {
+    font-size: 25px; /* Reduz o tamanho do título "wise" */
+  }
+}
+
+/* Para telas maiores que 1980px */
+@media (min-width: 1980px) {
+  .main-header-nav-title-weather {
+    font-size: 75px; /* Aumenta o tamanho do título do clima */
+  }
+  .main-header-nav-title-wise {
+    font-size: 55px; /* Aumenta o tamanho do título "wise" */
+  }
+  .main-header-nav-logo {
+    width: 200px; /* Aumenta a largura do logo */
+    margin-top: 70px; /* Ajusta a margem superior */
+  }
+  .main-header-nav {
+    height: 150px; /* Ajusta a altura do cabeçalho */
+  }
+  .main-city {
+    margin-top: 150px; /* Ajusta a margem superior */
+  }
+  .main-city-form input {
+    width: 1200px; /* Aumenta a largura do campo de entrada */
+    height: 75px; /* Aumenta a altura do campo de entrada */
+    font-size: 30px; /* Aumenta o tamanho da fonte */
+  }
+  .main-city h3 {
+    font-size: 60px; /* Aumenta o tamanho do título da cidade */
+    font-weight: 600; /* Peso da fonte */
+  }
+  .main-city-form button {
+    width: 155px; /* Aumenta a largura do botão */
+    height: 75px; /* Aumenta a altura do botão */
+    font-size: 25px; /* Aumenta o tamanho da fonte do botão */
+  }
+  #climaResult {
+    margin-top: 7rem; /* Ajusta a margem superior */
+    width: 800px; /* Aumenta a largura do contêiner de resultado do clima */
+    padding: 40px 10px; /* Ajusta o preenchimento */
+  }
+  .clima-city-name {
+    font-size: 60px; /* Aumenta o tamanho da fonte do nome da cidade */
+  }
+  .clima-city-temp {
+    padding: 60px 0; /* Ajusta o preenchimento */
+    font-size: 70px; /* Aumenta o tamanho da fonte da temperatura */
+  }
+  .clima-city-icon {
+    font-size: 40px; /* Aumenta o tamanho da fonte do ícone */
+    padding: 20px 0; /* Ajusta o preenchimento */
   }
   .clima-city-bot {
-    display: flex;
-    align-items: center; /* Alinha os itens verticalmente no centro */
-    text-align: center;
-    justify-content: center;
-    font-weight: 500;
-    font-size: large;
+    font-size: 35px; /* Aumenta o tamanho da fonte do texto de informações adicionais */
   }
-  
-  .clima-city-umidade,
-  .clima-city-vento {
-    display: flex;
-    align-items: center; /* Alinha os itens verticalmente no centro */
-    margin-top: 30px;
-  }
-  
   .espacamento {
-    margin: 0 10px; /* Adiciona espaçamento horizontal entre os elementos */
-    margin-top: 30px;
+    margin: 10 30px; /* Adiciona espaçamento horizontal */
   }
-  
   .flag-city {
-    width: 40px;
-    margin: 0 15px;
+    width: 70px; /* Aumenta a largura da bandeira da cidade */
   }
-  
-  #pin_map {
-    position: relative;
-    margin-left: 15px;
-    margin-top: 3px;
-  }
-  
-  @media (max-width: 815px) {
-    .main-city-form input {
-      width: 500px;
-    }
-  }
-  @media (max-width: 610px) {
-    .main-city-form input {
-      width: 400px;
-    }
-  }
-  @media (max-width: 565px) {
-    .main-header-nav-title-weather {
-      font-size: 40px;
-    }
-    .main-header-nav-title-wise {
-      font-size: 30px;
-    }
-    .main-header-nav-logo {
-      width: 120px;
-    }
-    #climaResult {
-      width: 400px;
-    }
-    .main-city-form input {
-      width: 300px;
-    }
-    .main-city-form button {
-      width: 80px;
-    }
-  }
-  @media (max-width: 470px) {
-    .main-header-nav-logo {
-      display: none;
-    }
-    #climaResult {
-      width: 350px;
-    }
-  }
-  @media (max-width: 390px) {
-    #climaResult {
-      width: 350px;
-    }
-    .main-city-form input {
-      width: 250px;
-    }
-    .main-city-form button {
-      width: 70px;
-      font-size: 13px;
-    }
-    .main-city h3 {
-      font-size: 20px;
-    }
-    .clima-city-temp {
-      font-size: 40px;
-    }
-    .clima-city-icon {
-      font-size: 20px;
-    }
-  }
-  @media (max-width: 350px) {
-    #climaResult {
-      margin-top: 2rem;
-      margin-bottom: 100px;
-      width: 270px;
-      padding: 20px 10px;
-    }
-    .main-city-form input {
-      width: 200px;
-      height: 35px;
-    }
-    .main-city h3 {
-      font-size: 15px;
-      font-weight: 600;
-    }
-    .main-city-form button {
-      width: 65px;
-      font-size: 13px;
-      height: 35px;
-    }
-    .clima-city-temp {
-      font-size: 35px;
-    }
-    .clima-city-name {
-      font-size: x-large;
-    }
-    .flag-city {
-      width: 30px;
-      margin: 0 10px;
-    }
-    .main-header-nav-title-weather {
-      font-size: 35px;
-    }
-    .main-header-nav-title-wise {
-      font-size: 25px;
-    }
-  }
-  @media(min-width: 1980px) {
-    .main-header-nav-title-weather {
-        font-size: 75px;
-      }
-      .main-header-nav-title-wise {
-        font-size: 55px;
-      }
-      .main-header-nav-logo {
-          width: 200px;
-          margin-top: 70px;
-      }
-      .main-header-nav {
-          height: 150px;
-      }
-  
-      .main-city{
-        margin-top: 150px;
-      }
-    .main-city-form input {
-        width: 1200px;
-        height: 75px;
-        font-size: 30px;
-      }
-      .main-city h3 {
-        font-size: 60px;
-        font-weight: 600;
-      }
-      .main-city-form button {
-        width: 155px;
-        height: 75px;
-        font-size: 25px;
-      }
-  
-    #climaResult {
-        margin-top: 7rem;
-        width: 800px;
-        padding: 40px 10px;
-    }
-  
-    .clima-city-name {
-        font-size: 60px;
-    }
-  
-    .clima-city-temp {
-        padding: 60px 0;
-        font-size: 70px;
-    }
-  
-    .clima-city-icon {
-        font-size: 40px;
-        padding: 20px 0;
-    }
-  
-    .clima-city-bot {
-        font-size: 35px;
-    }
-    .espacamento {
-        margin: 10 30px;
-    }
-  
-    .flag-city {
-        width: 70px;
-    }
-  }
-
-
-  
+}
